Rewrote dark mode transition; Fixes

--- a/announcements/announcements.scss
+++ b/announcements/announcements.scss
@@ -28,7 +28,7 @@ main {
 		}
 
 		z-index: 10;
-		transition: $dark_mode_transition, 0.3s transform ease-in-out;
+		transition: 0.3s transform ease-in-out;
 
 		// h2 {
 		// 	font-family: Manrope;
