--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -135,9 +135,9 @@ html {
 }
 
 // Dark mode
-html, html *, html.dark, html.dark * {
+html.dark_mode_transition, html.dark_mode_transition * {
     &, &::before, &::after {
-        transition: $dark-mode-transition;
+        transition: $dark-mode-transition !important;
     }
 }
 
@@ -151,6 +151,7 @@ html:not(.loaded), html:not(.loaded) * {
 html.wait, html.wait * {
     cursor: wait !important;
 }
+
 
 body {
 	background: $page-color;
@@ -183,10 +184,10 @@ body {
     opacity: 0;
     visibility: hidden;
 
-    transition: $dark_mode_transition, 2s opacity ease-in-out, 0s visibility 2s;
+    transition: 2s opacity ease-in-out, 0s visibility 2s;
 
     &.shown {
-        transition: $dark_mode_transition, 0.4s opacity ease-in-out, 0s visibility 0s;
+        transition: 0.4s opacity ease-in-out, 0s visibility 0s;
         opacity: 1;
         visibility: visible;
     }
@@ -233,7 +234,7 @@ main {
             color: $text-color-dark;
         }
 
-        transition: $dark-mode-transition, 0.6s opacity ease-in-out;
+        transition: 0.6s opacity ease-in-out;
 
         span, p {
             color: #50f;
@@ -272,7 +273,7 @@ main {
         
         max-height: 0px;
         overflow: hidden;
-        transition: $dark_mode_transition, 0.3s max-height ease-in-out;
+        transition: 0.3s max-height ease-in-out;
 
         &.shown {
             max-height: 140px;
@@ -327,7 +328,7 @@ main {
                         text-shadow: $text-shadow-dark;
                     }
 
-                    transition: $dark_mode_transition, 0.1s border-color ease-in-out;
+                    transition: 0.1s border-color ease-in-out;
 
                     &:hover {
                         border-color: #fff;
